initial use of routers

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "1.12.2",
-    "zod": "^3.21.4"
+    "zod": "^3.21.4",
+    "zotero-api-client": "^0.41.1"
   },
   "devDependencies": {
     "@types/eslint": "^8.37.0",
